@@ -2,16 +2,20 @@ package com.biblioswipe.backend.service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import com.biblioswipe.backend.dto.LibroCreateDTO;
 import com.biblioswipe.backend.dto.LibroDTO;
 import com.biblioswipe.backend.mapper.LibroMapper;
 import com.biblioswipe.backend.model.Categoria;
 import com.biblioswipe.backend.repository.CategoriaRepository;
+import jakarta.transaction.Transactional;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
 import com.biblioswipe.backend.model.Libro;
 import com.biblioswipe.backend.repository.LibroRepository;
+import org.springframework.web.server.ResponseStatusException;
 
 @Service
 public class LibroService {
@@ -31,50 +35,57 @@ public class LibroService {
 
     // METODOS CRUD
     // obtener todos los libros
+    // BIEN
     public List<LibroDTO> getAllLibros() {
-        return libroRepository.findAll()
-                .stream()
+        List<Libro> libros = libroRepository.findAll();
+        return libros.stream()
                 .map(libroMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // obtener un libro por id
+    // BIEN
     public LibroDTO getLibroById(Long id) {
         Libro libro = libroRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Libro no encontrado"));
+                .orElseThrow(() -> new ResponseStatusException(
+                        HttpStatus.NOT_FOUND, "Libro con ID " + id + " no encontrado"
+                ));
         return libroMapper.toDTO(libro);
     }
 
     // crear un libro
     // no usar el save solo
-    public LibroDTO createLibro(LibroCreateDTO dto) {
+    // BIEN
+    @Transactional
+    public LibroDTO crearLibro(LibroCreateDTO dto) {
+        // 1. Verificamos si ya existe para no duplicar
+        if (libroRepository.existsByTituloAndAutor(dto.getTitulo(), dto.getAutor())) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Este libro ya existe");
+        }
+
+        // 2. Buscamos la categoría (el front envía el ID)
         Categoria categoria = categoriaRepository.findById(dto.getCategoriaId())
-                .orElseThrow(() -> new RuntimeException("Categoría no encontrada"));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Categoría no encontrada"));
 
-
+        // 3. Creamos la entidad
         Libro libro = new Libro();
         libro.setTitulo(dto.getTitulo());
         libro.setAutor(dto.getAutor());
         libro.setPortada(dto.getPortada());
         libro.setCategoria(categoria);
 
+        // 4. Guardamos y devolvemos el DTO completo (el que sí tiene ID)
         return libroMapper.toDTO(libroRepository.save(libro));
     }
 
-    // eliminar un libro concreto
-    // NO SE NECESITA, LO DEJO POR SI ACASO
-    public void deleteLibro(Long id) {
-        libroRepository.deleteById(id);
-    }
-
-
     // METODOS DE LÓGICA DE NEGOCIOS
     // encontrar libros por categoría
-    public List<LibroDTO> buscarPorCategoria(String nombreCategoria) {
-        return libroRepository.findByCategoria_NombreIgnoreCase(nombreCategoria)
+    // BIEN LOS TRES
+    public List<LibroDTO> getLibrosByCategoria(Long categoriaId) {
+        return libroRepository.findByCategoriaId(categoriaId)
                 .stream()
                 .map(libroMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // buscar libros por autor
@@ -86,11 +97,20 @@ public class LibroService {
     }
 
     // buscar libros por título
-    public List<LibroDTO> buscarPorTitulo(String titulo) {
-        return libroRepository.findByTituloContainingIgnoreCase(titulo)
+    public List<LibroDTO> buscarPorLibros(String query) {
+        // Asumiendo que creas este metodo en el repository
+        return libroRepository.findByTituloContainingIgnoreCaseOrAutorContainingIgnoreCase(query, query)
                 .stream()
                 .map(libroMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    // METODO AUXILIAR
+    public Libro getLibroEntity(Long id) {
+        return libroRepository.findById(id)
+                .orElseThrow(() -> new ResponseStatusException(
+                        HttpStatus.NOT_FOUND, "Libro no encontrado"
+                ));
     }
 
 }
